--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,6 +43,10 @@ jobs:
             ruby-version: '3.4.2'
             bundler-cache: true
 
+        - name: "Update bundle"
+          run: |
+            bundle update
+
         - name: "Fastline SwiftLint"
           uses: maierj/fastlane-action@5a3b971aaa26776459bb26894d6c1a1a84a311a7 # v3.1.0
           with:
