--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,9 +43,10 @@ jobs:
             ruby-version: '3.4.2'
             bundler-cache: true
 
-        - name: "Update bundle"
+        - name: "Alter bundle environment variables"
           run: |
-            bundle update
+            export GEM_PATH='/Users/runner/work/CityKey-iOS/CityKey-iOS/gems:$GEM_PATH'
+            export GEM_HOME='/Users/runner/work/CityKey-iOS/CityKey-iOS/gems:$GEM_HOME'
 
         - name: "Fastline SwiftLint"
           uses: maierj/fastlane-action@5a3b971aaa26776459bb26894d6c1a1a84a311a7 # v3.1.0
