--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -42,6 +42,10 @@ jobs:
           with:
             ruby-version: '3.4.2'
 
+        - name: "Install gems"
+          run: |
+            bundle install
+
         - name: "Fastline SwiftLint"
           run: |
             bundle exec fastlane lint
