--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -45,7 +45,7 @@ jobs:
 
         - name: "Install gems"
           run: |
-            cd CityKey-iOS && bundle install
+            bundle install
 
         - name: "Fastline SwiftLint"
           run: |
