--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -37,15 +37,9 @@ jobs:
           with:
             action: none
 
-        - name: "Set up Ruby"
-          uses: ruby/setup-ruby@32110d4e311bd8996b2a82bf2a43b714ccc91777 # v1.221.0
-          with:
-            ruby-version: '3.4.2'
-            bundler-cache: true
-
         - name: "Install gems"
           run: |
-            bundle install
+            bundle install --redownload
 
         - name: "Fastline SwiftLint"
           run: |
