--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -45,7 +45,7 @@ jobs:
           run: |
             bundle exec fastlane lint
           env:
-            FASTLANE_SKIP_UPDATE_CHECK: True
+            FASTLANE_SKIP_UPDATE_CHECK: true
 
 
     unit-tests:
